--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
         "astro": "astro"
     },
     "dependencies": {
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
         "@astrojs/check": "^0.9.4",
-        "@astrojs/sitemap": "^3.3.0",
-        "@tailwindcss/vite": "^4.0.14",
+        "@astrojs/sitemap": "^3.4.1",
+        "@tailwindcss/vite": "^4.1.11",
         "@types/aos": "^3.0.7",
-        "astro": "^5.5.3",
+        "astro": "^5.11.0",
         "lucide-astro": "^0.483.0",
         "prettier": "^3.5.3",
         "prettier-plugin-astro": "^0.14.1"
