--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@n8n/chat": "^0.61.0",
         "aos": "^2.3.4",
         "tailwindcss": "^4.1.11"
     },
@@ -25,4 +26,3 @@
         "prettier-plugin-astro": "^0.14.1"
     }
 }
-
