--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/vercel": "^8.2.10",
         "@n8n/chat": "^0.61.0",
         "aos": "^2.3.4",
         "tailwindcss": "^4.1.11"
