--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@astrojs/vercel": "^8.2.10",
         "@n8n/chat": "^0.61.0",
         "aos": "^2.3.4",
+        "docx": "^9.5.1",
         "html-to-docx": "^1.8.0",
         "tailwindcss": "^4.1.11"
     },
